# tycho-orderbook-sdk

./: .env.ex  .gitignore  Cargo.toml  README.md  clean.fmt.sh  docker-compose.yaml
back/: .gitignore  Cargo.toml
back/docs/: book.toml
back/docs/book/: 404.html  api.html  installation.html  introduction.html  print.html  quickstart.html  searchindex.js  searchindex.json  toc.html  toc.js  usage.html
back/docs/src/: SUMMARY.md  adapter.md  introduction.md
back/misc/data-back/: binance.odb.json  ethereum.stream-balances.json
back/misc/data-front-v2/: orderbook.base.usdc-cbbtc.json  orderbook.base.usdc-usdt.json  orderbook.base.weth-cbbtc.json  orderbook.base.weth-usdc.json  orderbook.ethereum.DAI-USDT.json  orderbook.ethereum.USDC-DAI.json  orderbook.ethereum.USDC-USDT.json  orderbook.ethereum.USDC-WBTC.json  orderbook.ethereum.WBTC-USDT.json  orderbook.ethereum.WETH-DAI.json  orderbook.ethereum.WETH-USDC.json  orderbook.ethereum.WETH-USDT.json  orderbook.ethereum.WETH-WBTC.json
back/misc/data-obpc/: 0x56072c95faa701256059aa122697b133aded9279-0xdc035d45d973e3ec169d2276ddab16f1e407384f.json  0xd9d920aa40f578ab794426f5c90f6c731d159def-0x7a56e1c57c7475ccf742a1832b028f0456652f97.json
back/misc/notes/: Notes.md
back/misc/old/: amms.rs  liquidity.rs  stream.rs  stream_state.rs  types.rs
back/ops/: api.test.sh  local.obp.start.sh
back/src/: api.rs  co.wop.rs  obpc.rs  obpco.rs  quickstart.rs  stream.rs
back/src/shd/: mod.rs  obp.rs  static.rs  types.rs  wop.rs
back/src/shd/core/: amms.rs  book.rs  client.rs  exec.rs  execute.rs  gas.rs  liquidity.rs  mod.rs  orderbook.rs  rpc.rs
back/src/shd/data/: fmt.rs  redis.rs
back/src/shd/maths/: opti.rs  path.rs  steps.rs
back/src/shd/sdk/: adapter.rs  builder.rs  mod.rs  provider.rs
back/src/shd/utils/: misc.rs
back/tests/: api.test.sh  trades.rs
docs/: book.toml  publish.sh
docs/book/: 1-Introduction.html  2-Usage.html  3-Quickstart.html  4-Frontend.html  404.html  frontend.html  index.html  introduction.html  print.html  quickstart.html  searchindex.js  searchindex.json  toc.html  toc.js  usage.html
docs/code/: bid-ask.txt
docs/src/: 1-Introduction.md  2-Usage.md  3-Quickstart.md  4-Frontend.md  SUMMARY.md  frontend.md  introduction.md  quickstart.md
examples/: .env.quickstart.ex  local.demo.sh  orderbook.rs  quickstart.rs  quickstart.sh  tmp.rs
front/ops/: Dockerfile  old_Dockerfile
src/: adapter.rs  builder.rs  lib.rs  provider.rs  types.rs
src/adapters/: binance.rs  default.rs
src/core/: book.rs  client.rs  exec.rs  gas.rs  helper.rs  mod.rs  protos.rs  rpc.rs  solver.rs
src/data/: fmt.rs  redis.rs
src/maths/: mod.rs  opti.rs  path.rs  steps.rs  ticks.rs
src/utils/: misc.rs  mod.rs  static.rs
tests/: trades.rs
