[package]
name = "tycho-orderbook"
version = "0.1.0"
edition = "2021"

# Repo name just has the suffix -sdk for clarity.

description = "Transposes onchain liquidity from AMMs into a familiar orderbook format with Tycho"
license = "MIT" 
readme = "README.md"
repository = "https://github.com/0xMerso/tycho-orderbook-sdkk"
homepage = "https://github.com/0xMerso/tycho-orderbook-sdk"

keywords = [ "dex", "mev", "blockchain", "ethereum", "orderbook", "tycho", "defi", "amm", "cex", "binance", "liquidity", "swap", "crypto", "solver"]
categories = ["finance", "cryptography::cryptocurrencies"]
authors = ["Merso merso.eth@gmail.com"] 
documentation = "https://tycho-orderbook.gitbook.io/docs"

# ======================================================================================================================================================================================================

[dependencies]
tycho-simulation = { git = "https://github.com/propeller-heads/tycho-simulation.git", rev = "662c37fd2cc7cff65407e3534584860aab184d69" }
tycho-common = { version = "0.64.2" }
tycho-client = { version = "0.64.2" }
tycho-execution = { version = "0.73.0",  features = ["evm"] }

tokio = { version = "1.28", features = ["full"] }
chrono = "0.4.23"
futures = "0.3.31"
num-bigint = "0.4.6"
toml = "0.8.12"
serde = { version = "1.0.104", features = ["derive"] }
tracing-subscriber = "0.3"
clippy = "0.0.302"
env_logger = "0.11.3"
eyre = "0.6.11"
log = "0.4.20"
tracing = "0.1"
url = "2.5.0"
anyhow = "1.0"
hex-literal = "0.4"
hex = "0.4.3"
bytes = "1.4.0"
fern = { version = "0.6.2", features = ["colored"] }
colored = "2.0.0"
rand = "0.8.5"
serde_json = "1.0"
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
rayon = "1.10.0"
async-trait = "0.1.88"
reqwest = "0.12.4"
redis = { version = "0.26.1", features = ["tokio-comp"] }
alloy = { version = "0.5.4", features = [
    "full", "node-bindings", "json-rpc", "rpc-client", "providers", "signer-local", "rpc-types-eth", "consensus","rpc",
    "rpc-types-mev",
    "network",
    "providers",
    "transports",
    "transport-http",
    "signers",
    ] }

num-traits = "0.2.19"
alloy-chains = "0.1.63"
primitive-types = "0.10.1"
indicatif = "0.17.11"
alloy-primitives = "0.8.23"
# Struct doc (swagger) when SDK is used with an external API, SDK struct will be added to schema
utoipa = "5.3.1"

# ======================================================================================================================================================================================================

[lib]
path = "src/lib.rs"

[[bin]]
name = "quickstart" 
path = "examples/quickstart.rs"

# ======================================================================================================================================================================================================
